fix: add margin to link button so yellow box doesn't get cut off

--- a/client/src/public/css/styles.css
+++ b/client/src/public/css/styles.css
@@ -1440,7 +1440,7 @@ code {
 }
 
 .authentication-modal__login-form-element {
-  margin: 4px 0;
+  margin: 8px 0;
   @media (max-width: 1200px) {
     width: 90%;
   }
